--- a/content/post/references.bib
+++ b/content/post/references.bib
@@ -17,3 +17,79 @@
     pages = {1686},
     doi = {10.21105/joss.01686},
   }
+  
+@Manual{citedevtools,
+    title = {devtools: Tools to Make Developing R Packages Easier},
+    author = {Hadley Wickham and Jim Hester and Winston Chang},
+    year = {2020},
+    note = {https://devtools.r-lib.org/, https://github.com/r-lib/devtools},
+  }
+  
+@Manual{citecesR,
+    title = {cesR: Access the CES Datasets a Little Easier.},
+    author = {Paul A. Hodgetts and Rohan Alexander},
+    year = {2020},
+    note = {R package version 0.1.0},
+  }
+  
+@Manual{citeknitr,
+    title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
+    author = {Yihui Xie},
+    year = {2020},
+    note = {R package version 1.30},
+  }
+  
+@Article{citevisdat,
+    title = {visdat: Visualising Whole Data Frames},
+    author = {Nicholas Tierney},
+    doi = {10.21105/joss.00355},
+    url = {http://dx.doi.org/10.21105/joss.00355},
+    year = {2017},
+    publisher = {Journal of Open Source Software},
+    volume = {2},
+    number = {16},
+    pages = {355},
+    journal = {JOSS},
+  }
+  
+@Manual{citeskimr,
+    title = {skimr: Compact and Flexible Summaries of Data},
+    author = {Elin Waring and Michael Quinn and Amelia McNamara and Eduardo {Arino de la Rubia} and Hao Zhu and Shannon Ellis},
+    year = {2020},
+    note = {https://docs.ropensci.org/skimr (website),
+https://github.com/ropensci/skimr},
+  }
+  
+@data{citeSurvey,
+  author = {Stephenson, Laura B and Harell, Allison and Rubenson, Daniel and Loewen, Peter John},
+  publisher = {Harvard Dataverse},
+  title = {{2019 Canadian Election Study - Online Survey}},
+  year = {2020},
+  version = {DRAFT VERSION},
+  doi = {10.7910/DVN/DUS88V},
+  url = {https://doi.org/10.7910/DVN/DUS88V}
+}
+
+@Manual{citelabelled,
+    title = {labelled: Manipulating Labelled Data},
+    author = {Joseph Larmarange},
+    year = {2020},
+    note = {R package version 2.7.0},
+    url = {http://larmarange.github.io/labelled/},
+  }
+  
+@Manual{citetopIncome,
+    publisher = {Statistics Canada},
+    title = {"Education and occupation of high-income Canadians"},
+    year = {2018},
+    url = {https://www12.statcan.gc.ca/nhs-enm/2011/as-sa/99-014-x/99-014-x2011003_2-eng.cfm},
+  }
+  
+@Manual{citeearnbyprovinces,
+    publisher = {Workopolis Blog},
+    title = {"Here's how much Canadians are earning by province"},
+    year = {2018},
+    url = {https://careers.workopolis.com/advice/how-much-canadians-are-earning-by-province/},
+  } 
+  
+  
